--- a/todolist/static/css/index.css
+++ b/todolist/static/css/index.css
@@ -1,3 +1,14 @@
+body {
+    background: url('../imgs/background.jpg') no-repeat fixed center;
+}
+
+h1 {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: white;
+}
+
 .container {
     max-width: 720px;
 }
@@ -16,4 +27,8 @@
 }
 .createtime {
     text-align: right;
+}
+
+li.list-group-item > span {
+    margin: 10px;
 }
